vault-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: PathPrefix(`/ui`) || PathPrefix(`/v1`)
    services:
    - name: vault-ui
      port: 8200
